syntax = "proto3";

package transaction;

message Transaction {
	string id = 1;
	string name = 2;
	double amount = 3;
	string person_id = 4;
	string date = 5;
	string bank = 6;
}

message CreateTransactionRequest {
	Transaction transaction = 1;
}

message CreateTransactionResponse {
	Transaction transaction = 1;
}

message ReadTransactionRequest {
	string transaction_id = 1;
}

message ReadTransactionResponse {
	Transaction transaction = 1;
}

message UpdateTransactionRequest {
	Transaction transaction = 1;
}
message UpdateTransactionResponse {
	Transaction transaction = 1;
}

message DeleteTransactionRequest {
	string transaction_id = 1;
}

message DeleteTransactionResponse {
	string transaction_id = 1;
}

service TransactionService {
	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse) {}
	rpc ReadTransaction (ReadTransactionRequest) returns (ReadTransactionResponse) {}
	rpc UpdateTransaction (UpdateTransactionRequest) returns (UpdateTransactionResponse) {}
	rpc DeleteTransaction (DeleteTransactionRequest) returns (DeleteTransactionResponse) {}
}